# personal_organiser

./: CMakeLists.txt  basescreen.cpp  basescreen.h  daywin.cpp  daywin.h  errorwindow.cpp  errorwindow.h  main.cpp  main.h  monthOrYearChange.cpp  monthOrYearChange.h
